; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_mon.c_wilc_wfi_deinit_mon_interface.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/wilc1000/extr_wilc_mon.c_wilc_wfi_deinit_mon_interface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wilc = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wilc_wfi_deinit_mon_interface(%struct.wilc* %0, i32 %1) #0 {
  %3 = alloca %struct.wilc*, align 8
  %4 = alloca i32, align 4
  store %struct.wilc* %0, %struct.wilc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.wilc*, %struct.wilc** %3, align 8
  %6 = getelementptr inbounds %struct.wilc, %struct.wilc* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %26

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %10
  %14 = load %struct.wilc*, %struct.wilc** %3, align 8
  %15 = getelementptr inbounds %struct.wilc, %struct.wilc* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @unregister_netdevice(i32* %16)
  br label %23

18:                                               ; preds = %10
  %19 = load %struct.wilc*, %struct.wilc** %3, align 8
  %20 = getelementptr inbounds %struct.wilc, %struct.wilc* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @unregister_netdev(i32* %21)
  br label %23

23:                                               ; preds = %18, %13
  %24 = load %struct.wilc*, %struct.wilc** %3, align 8
  %25 = getelementptr inbounds %struct.wilc, %struct.wilc* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %23, %9
  ret void
}

declare dso_local i32 @unregister_netdevice(i32*) #1

declare dso_local i32 @unregister_netdev(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
